--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,19 +5,26 @@ on:
     branches:
       - main
 
-jobs:
-  simple_deployment_pipeline:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: npm install
-        run: npm install
-      - name: lint
-        run: npm run eslint
-      - name: build
-        run: npm run build
-      - name: test
-        run: npm run test
+      jobs:
+        simple_deployment_pipeline:
+          runs-on: ubuntu-20.04
+          steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                node-version: '20'
+            - name: npm install
+              run: npm install
+            - name: lint
+              run: npm run eslint
+            - name: build
+              run: npm run build
+            - name: test
+              run: |
+                npm run test
+                - name: e2e tests
+                  uses: cypress-io/github-action@v2
+                  with:
+                    command: npm run test:e2e
+                    start: npm run start-prod
+                    wait-on: http://localhost:8080      
